bk_ida/gccida/c1/emit_input_reload_insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6606:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6613:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v14; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6614:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v15; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6619:4: error: expected ';' after expression
rtx in_reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6619:5: error: use of undeclared identifier 'in_reg'; did you mean 'find_reg'?
rtx in_reg; // rax 
    ^~~~~~
    find_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:1683:1: note: 'find_reg' declared here
find_reg (chain, order)
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6620:4: error: expected ';' after expression
rtx v21; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6620:5: error: use of undeclared identifier 'v21'; did you mean 'v11'?
rtx v21; // rcx 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6610:14: note: 'v11' declared here
unsigned int v11; // r12d 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6623:6: error: use of undeclared identifier 'v24'
rtx *v24; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6625:4: error: expected ';' after expression
rtx v26; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6625:5: error: use of undeclared identifier 'v26'
rtx v26; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6644:4: error: expected ';' after expression
rtx x; // [rsp+10h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6644:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+10h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6645:4: error: expected ';' after expression
rtx xa; // [rsp+10h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6645:5: error: use of undeclared identifier 'xa'
rtx xa; // [rsp+10h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6646:4: error: expected ';' after expression
rtx insn; // [rsp+18h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6646:5: error: use of undeclared identifier 'insn'; did you mean 'insns'?
rtx insn; // [rsp+18h] [rbp-40h] 
    ^~~~
    insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6633:18: note: 'insns' declared here
 struct rtx_def *insns; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6648:1: error: use of undeclared identifier 'insn'; did you mean 'insns'?
insn = chain->insn; 
^~~~
insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6633:18: note: 'insns' declared here
 struct rtx_def *insns; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6654:1: error: use of undeclared identifier 'x'
x = old; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6665:34: error: use of undeclared identifier 'insn'; did you mean 'insns'?
equiv_reg = find_equiv_reg( old, insn, ALL_REGS, -1, 0LL, 0, inmode); 
                                 ^~~~
                                 insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/reload1.c:6633:18: note: 'insns' declared here
 struct rtx_def *insns; // rax 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_input_reload_insns/src/obj/reload1.o] Error 1
